DocImport 1.0.3
================================================================================
# [MEDIUM] The CLI script produced a fatal error
# [MEDIUM] Issues with multilingual sites
# [MEDIUM] Document generation in the CLI wouldn't get the correct URL to images
# [MEDIUM] Fatal error clearing the SEF URL cache
# [MEDIUM] Missing jimport statement in URL cache model

DocImport 1.0.2
================================================================================
# [HIGH] Internal server error on ancient versions of PHP 5.3 with broken late static binding implementations
# [MEDIUM] Documents with XInclude statements didn't work if the linked XML documents were not web accessible

DocImport 1.0.1
================================================================================
# [HIGH] The component's menu item was removed if the installation couldn't proceed (too low PHP or Joomla! version)
# [HIGH] Joomla! doesn't run the database upgrade scripts when upgrading from a very old version or when the #__schemas entry is somehow missing
# [HIGH] After a failed installation, even if the subsequent installation is reported successful Joomla! does not install the database tables causing a broken installation
# [MEDIUM] The reason why the installation was aborted is not shown due to a Joomla! bug; worked around

DocImport 1.0.0
================================================================================
! First public release